--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -6,6 +6,16 @@
     <title>Zili &ndash; Blog</title>
     <link rel="stylesheet"  type="text/css" href="/static/css/layouts/blog.css">
     <link rel="stylesheet"  type="text/css" href="/static/css/layouts/monokai.css">
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?58793c0e3ae8135d058b27294abfbd0a";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+
 </head>
 <body>
 
